--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "lite-server": "^2.5.4"
   },
   "dependencies": {
-    "bootstrap": "^4.5.0",
-    "jquery": "^1.12.4",
-    "popper.js": "^1.16.1"
+    "bootstrap": "^4.0.0",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   }
 }
